--- a/Style.css
+++ b/Style.css
@@ -96,8 +96,14 @@ body {
     width: 85%;
     max-width: 320px;
     min-width: 320px;
+    max-height: 490px;
     display: none;
-    margin: 50px auto;
+    position: fixed;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    margin: auto;
 }
 
 .about-us-painel img {
@@ -539,12 +545,12 @@ body {
 
 /*  R  E  S  P  O  N  S  I  V  E  N  E  S  S*/
 
-@media screen and (min-width: 1200px) {}
+@media screen and (min-width: 1200px) {
+
+}
 
 @media screen and (min-width: 960px) {
-    .column {
-
-    }
+    
 }
 
 @media screen and (min-width: 720px) {
@@ -571,4 +577,6 @@ body {
     }
 }
 
-@media screen and (min-width: 480px) {}
+@media screen and (min-width: 480px) {
+    
+}
